--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>                 
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="#" target=""><i class="fa fa-paper-plane"></i> Contact Me</a>              
+            <!-- <a class="btn btn-cta-primary pull-right" href="#" target=""><i class="fa fa-paper-plane"></i> Contact Me</a>  -->             
         </div><!--//container-->
     </header><!--//header-->
     
@@ -372,10 +372,10 @@
                         <h2 class="heading">Favourite coding music</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-headphones"></i> <a href="#"></a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#"></a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#"></a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#"></a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#"></a>Hotline Bling - Drake</li>
+                                <li><i class="fa fa-headphones"></i> <a href="#"></a>Latch - Disclousure</li>
+                                <li><i class="fa fa-headphones"></i> <a href="#"></a>Stole the show - Kygo</li>
+                                <li><i class="fa fa-headphones"></i> <a href="#"></a>Supersoaker - Kings of Leon</li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
