+Se cambia link a CV

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <h2 class="heading">Curriculum Vitae</h2>
                         <div class="content">
                              
-                             <a href="https://www.visualcv.com/f9t89effpva" class="btn btn-block btn-primary"><span class="glyphicon glyphicon-eye-open" ></span> See CV</a>
+                             <a href="https://www.visualcv.com/gregory-onasis-gomez-blas?access=2sKGUcMxSUI" class="btn btn-block btn-primary"><span class="glyphicon glyphicon-eye-open" ></span> See CV</a>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                     
